# ComputerGraphics_GeometricModeling

./: .gitignore  CMakeLists.txt
CoordinateSystem/: CMakeLists.txt  CoordinateSystem.cpp  CoordinateSystem.h
Menu/: CMakeLists.txt  CustomPanel.cpp  CustomPanel.h  Menu.h
lab1/: CMakeLists.txt  Figure.cpp  Figure.h  main.cpp
lab1/src/: CoordinateSystem.cpp  CoordinateSystem.h  CustomPanel.cpp  CustomPanel.h  Menu.cpp  Menu.h  main.cpp
lab2/: CMakeLists.txt  PerseusSpiric.cpp  PerseusSpiric.h  main.cpp
lab3_4/: BezierCurve2.cpp  BezierCurve2.h  CMakeLists.txt  main.cpp
lab5/: CMakeLists.txt  CabinetProjection.cpp  CabinetProjection.h  main.cpp
lab6/: CMakeLists.txt  Torus.cpp  Torus.h  main.cpp
lab7/: CMakeLists.txt  DragonCurve.cpp  DragonCurve.h  main.cpp
menu/: CMakeLists.txt  CustomPanel.cpp  CustomPanel.h
